# DiskImager

./: .gitignore  DiskImager.spec  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
disktool/: __init__.py  cli.py  gui.py  settings.py
disktool/core/: __init__.py  benchmark.py  compress.py  disk.py  format.py  imaging.py  mount.py  partition.py  verify.py
disktool/platform/: __init__.py  darwin.py  linux.py  windows.py
tests/: __init__.py  test_benchmark.py  test_checksum_mount.py  test_cli.py  test_compress.py  test_darwin.py  test_disk.py  test_format.py  test_imaging.py  test_partition.py  test_settings.py  test_verify.py
