[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "disktool"
version = "1.0.0"
description = "Cross-platform disk imaging, backup, restore, flash & secure erase tool with a modern GUI and rich CLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "DiskImager Contributors" }]
keywords = [
    "disk", "imaging", "backup", "restore", "flash", "clone", "erase",
    "iso", "usb", "linux", "windows", "macos", "sha256", "sha512",
    "gui", "cli", "customtkinter", "pyinstaller", "storage", "sysadmin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Hardware",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "psutil>=5.9",
    "tqdm>=4.66",
    "cryptography>=41.0",
    "customtkinter>=5.2",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
dev = ["pyinstaller>=6.0", "pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
disktool = "disktool.cli:main"

[project.urls]
Homepage = "https://github.com/at0m-b0mb/DiskImager"
Repository = "https://github.com/at0m-b0mb/DiskImager"

[tool.setuptools.packages.find]
where = ["."]
include = ["disktool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
